--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=0" />
 
+    <title>Tic-Tac-Toe</title>
+
+    <link rel="stylesheet" href="style.css" type="text/css" />
+  </head>
+
+  <body>
+  <div class = "TTT-grid">
+    <div class = "row">
+    <div class = "spot"></div>
+    <div class = "spot"></div>
+    <div class = "spot"></div>
+    </div>
+    <div class = "row">
+    <div class = "spot"></div>
+    <div class = "spot"></div>
+    <div class = "spot"></div>
+    </div>
+    <div class = "row">
+    <div class = "spot"></div>
+    <div class = "spot"></div>
+    <div class = "spot"></div>
+    </div>
+  </div>
+  <script src="main.js"></script>
+  </body>
+</html>
