Made my code compatible with Anthony's HTML

--- a/index.html
+++ b/index.html
@@ -12,19 +12,46 @@
   <body>
   <div class = "TTT-grid">
     <div class = "row">
-    <div class = "spot"></div>
-    <div class = "spot"></div>
-    <div class = "spot"></div>
+      <div class = "spot" id='0'>
+        <span>X</span>
+        <span>O</span>
+      </div>
+      <div class = "spot" id='1'>
+        <span>X</span>
+        <span>O</span>
+      </div>
+      <div class = "spot" id='2'>
+        <span>X</span>
+        <span>O</span>
+      </div>
     </div>
     <div class = "row">
-    <div class = "spot"></div>
-    <div class = "spot"></div>
-    <div class = "spot"></div>
+      <div class = "spot" id='3'>
+        <span>X</span>
+        <span>O</span>
+      </div>
+      <div class = "spot" id='4'>
+        <span>X</span>
+        <span>O</span>
+      </div>
+      <div class = "spot" id='5'>
+        <span>X</span>
+        <span>O</span>
+      </div>
     </div>
     <div class = "row">
-    <div class = "spot"></div>
-    <div class = "spot"></div>
-    <div class = "spot"></div>
+      <div class = "spot" id='6'>
+        <span>X</span>
+        <span>O</span>
+      </div>
+      <div class = "spot" id='7'>
+        <span>X</span>
+        <span>O</span>
+      </div>
+      <div class = "spot" id='8'>
+        <span>X</span>
+        <span>O</span>
+      </div>
     </div>
   </div>
   <script src="main.js"></script>
