--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <!-- spots, rows and a 3x3 grid for tic-tac-toe game -->
   <div class = "TTT-grid">
     <div class = "row">
       <div class = "spot" id='0'>
