Losing player goes first after resetting, or random when its a draw. Centered reset button

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
   </div>
   <p></p>
-  <button hidden id = "restartGame">Restart Game</button>
+  <button id = "restartGame">Restart Game</button>
   <script src="main.js"></script>
   </body>
 </html>
