--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </div>
   </div>
   <p></p>
+  <!-- Reset button for the board -->
   <button id = "restartGame">Restart Game</button>
   <script src="main.js"></script>
   </body>
